--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Onboarddisplay</h1>
+        <h1>On-Board Display</h1>
         <h2>A graphic OBD-II display to show continually updated car diagnostics.</h2>
 
         <section id="downloads">
@@ -29,9 +29,9 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-on-board-display-page" class="anchor" href="#welcome-to-on-display-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My On-Board Display Page.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This is the project page of the On-Board Display by <b>Joseph Nobes</b>(@Scorpuss3). This page contains tutorials on the software, and also troubleshooting information, along with the project's background.<br>Enjoy your stay!<br><a href="https://github.com/Scorpuss3/onBoardDisplay">Github Repository</a></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
