Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Onboarddisplay by Scorpuss3</title>
+    <title>On-Board Display by Scorpuss3</title>
   </head>
 
   <body>
@@ -29,29 +29,39 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-on-board-display-page" class="anchor" href="#welcome-to-on-display-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My On-Board Display Page.</h3>
+<a id="welcome-to-my-on-board-display-project-page" class="anchor" href="#welcome-to-my-on-board-display-project-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my On-Board Display Project Page!</h3>
 
-<p>This is the project page of the On-Board Display by <b>Joseph Nobes</b>(@Scorpuss3). This page contains tutorials on the software, and also troubleshooting information, along with the project's background.<br>Enjoy your stay!<br><a href="https://github.com/Scorpuss3/onBoardDisplay">Github Repository</a></p>
+<p>This is the project page of the On-Board Display by me (<strong>Joseph Nobes</strong>,<a href="https://github.com/Scorpuss3" class="user-mention">@Scorpuss3</a>). This site contains tutorials on the software, and also troubleshooting information, along with the project's background.
+Enjoy your stay!</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="site-links" class="anchor" href="#site-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Site Links:</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>[Tutorials]
+[Troubleshooting]
+<a href="https://github.com/Scorpuss3/onBoardDisplay">Github Repository</a></p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="project-description" class="anchor" href="#project-description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Description</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>This is an amateur attempt at an on-board display for a car. It can display real-time diagnositic information about the vehicle, read from the ECU using and <a href="http://elmelectronics.com/DSheets/ELM327DS.pdf">ELM327</a> Wi-Fi adaptor to connect to the OBDII port, which is present on most vehicles since 1997. It has the following features and more:</p>
+
+<ul>
+<li>Read RPM, Speed, Manifold Absolute Pressure, etc... and present in in a virtual dashboard on-screen.</li>
+<li>Read any error-codes the ECU has flagged
+
+<ul>
+<li>Diagnose them for the user to understand.</li>
+<li>Locate them on vehicle (Custom vehicle packs created by me for a limited number)</li>
+</ul>
+</li>
+<li>Deactivation of the 'Check engine' light.</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="project-background" class="anchor" href="#project-background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Background</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>I have created this software mainly for an A-Level project. However, I was likely to do something similar anyway eventually! I chose this because it has allowed my to fulfill course requirements while also enjoying the project. You can track the progress of the build on the <a href="https://github.com/Scorpuss3/onBoardDisplay">Github Repository</a></p>
       </section>
     </div>
 
